--- a/Lamazon/Lamazon.Web/Views/Home/Index.cshtml
+++ b/Lamazon/Lamazon.Web/Views/Home/Index.cshtml
@@ -1,8 +1,13 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<ProductViewModel>
+@{
+    Layout = "~/Views/Shared/_LayoutProducts.cshtml";
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+}
+<h2>Featured Products</h2>
+
+<div class="row">
+    @foreach (var product in Model)
+    {
+        @(await Html.PartialAsync("_ProductItem", product))
+    }
 </div>
