--- a/Lamazon - office/Lamazon.Web/Views/Products/Index.cshtml
+++ b/Lamazon - office/Lamazon.Web/Views/Products/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@model IEnumerable<ProductViewModel>
+
 @{
     Layout = "~/Views/Shared/_LayoutProducts.cshtml";
-
 }
-<h2>Featured Products</h2>
+
+<h2>Products</h2>
 
 <div class="row">
-    @foreach (var product in Model)
+    @foreach(var product in Model)
     {
-        @(await Html.PartialAsync("_ProductItem", product))
+        @(await Html.PartialAsync("_Productitem", product))
     }
+
 </div>
