--- a/Lamazon - office/Lamazon.Web/Views/Shared/_Navbar.cshtml
+++ b/Lamazon - office/Lamazon.Web/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-expand-sm navbar-ligth bg-white border-bottom box-shadow navbar-fixed mb-3 navbar-toggleable-sm">
+﻿
+<nav class="navbar navbar-expand-sm navbar-ligth bg-white border-bottom box-shadow navbar-fixed mb-3 navbar-toggleable-sm">
 
     <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
@@ -24,6 +25,28 @@
                         <i class="material-icons">shopping_cart</i>
                     </a>
                 </li>
+                @if(User.Identity.IsAuthenticated)
+                {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link header-nav" href="javascript:;" data-bs-toggle="dropdown" ></a>
+                     
+                        <i class="fas fa-user mr-1"></i>@User.DisplayName()
+                        <div class="dropdown-menu dropdown-menu-right">
+                            @if(User.IsAdmin())
+                            {
+                                <a class="dropdown-item" >Lamazon CMS</a>
+                            }
+                      <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
+                        </div>
+                    </li>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-controller="Users" asp-action="Login">Login</a>
+                    </li>
+                }
+
                 <li class="nav-item">
                     <a class="nav-link text-dark">Login</a>
                 </li>
