--- a/Lamazon - office/Lamazon.Web/Views/Shared/_Footer.cshtml
+++ b/Lamazon - office/Lamazon.Web/Views/Shared/_Footer.cshtml
@@ -2,16 +2,11 @@
     <div class="container">
         <nav class="float-left">
             <ul class="footer-links">
-                <li>
-                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </li>
-              
+                <li><a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
             </ul>
-           
         </nav>
-        <div class="copyrigth float-rigth">
+        <div class="copyright float-right">
             &copy;@DateTime.Now.Year.ToString() - Lamazon
         </div>
-</div>
-
+    </div>
 </footer>
