--- a/Lamazon - office/Lamazon.Web/Views/Shared/_Navbar.cshtml
+++ b/Lamazon - office/Lamazon.Web/Views/Shared/_Navbar.cshtml
@@ -1,55 +1,53 @@
-﻿
-<nav class="navbar navbar-expand-sm navbar-ligth bg-white border-bottom box-shadow navbar-fixed mb-3 navbar-toggleable-sm">
-
+﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow navbar-fixed mb-3">
     <div class="container">
         <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/images/lamazon.svg" class="navbar-logo" alt="Lamazon" style="height:30px;" />
+            <img src="~/images/lamazon.svg" class="navbar-logo" />
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" 
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse justify-content-between">
+        <div class="navbar-collapse collapse justify-content-between">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                    <a asp-controller="Products" asp-action="Index" class="nav-link text-dark">Products</a>
                 </li>
             </ul>
+
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link notification-container">
                         <i class="material-icons">shopping_cart</i>
                     </a>
                 </li>
-                @if(User.Identity.IsAuthenticated)
+
+                @if (User.Identity.IsAuthenticated)
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link header-nav" href="javascript:;" data-bs-toggle="dropdown" ></a>
-                     
-                        <i class="fas fa-user mr-1"></i>@User.DisplayName()
+                        <a class="nav-link header-nav" href="javascript:;" data-bs-toggle ="dropdown" aria-haspopup="true" aria-expanded="false" style="text-transform:none !important" >
+                            <i class="fas fa-user mr-1"></i>@User.DisplayName()
+                        </a>
                         <div class="dropdown-menu dropdown-menu-right">
-                            @if(User.IsAdmin())
+                            @if (User.IsAdmin())
                             {
-                                <a class="dropdown-item" >Lamazon CMS</a>
+                                <a class="dropdown-item">Lamazon CMS</a>
                             }
-                      <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
+                            <a class="dropdown-item" asp-area="" asp-controller="Users" asp-action="Logout">Logout</a>
                         </div>
+
                     </li>
                 }
                 else
                 {
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-controller="Users" asp-action="Login">Login</a>
-                    </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-controller="Users" asp-action="Login">Login</a>
+                </li>
                 }
 
-                <li class="nav-item">
-                    <a class="nav-link text-dark">Login</a>
-                </li>
+               
             </ul>
         </div>
     </div>
