--- a/Lamazon - office/Lamazon.Web/Views/Shared/_ProductItem.cshtml
+++ b/Lamazon - office/Lamazon.Web/Views/Shared/_ProductItem.cshtml
@@ -6,9 +6,8 @@
         <div class="product-content">
             <a asp-controller="Products" asp-action="ProductDetails" asp-route-id="@Model.Id">
                 <p class="product-name">@Model.Name</p>
-
             </a>
-            <p class="product-category">@Model.ProductCategory</p>
+            <p class="product-category">@Model.ProductCategory.Name</p>
             @if(Model.DiscountedPrice != Model.Price)
             {
                 <p class="product-price">
@@ -18,9 +17,9 @@
             }
             else
             {
-            <p class="product_price">
-                $@Model.Price.ToString("N2")
-            </p>
+                <p class="product-price">
+                    $@Model.Price.ToString("N2")
+                </p>
             }
             <div style="clear:both"></div>
             <hr />
@@ -28,19 +27,17 @@
                 <p>@Model.Description</p>
             </div>
         </div>
-            <div class="product-actions">
-                @if (Model.IsAddedToCart)
-                {
-                    <button data-id="@Model.Id" class="btn btn-remove-from-cart btn-danger">Remove from Cart</button>
-                    <button data-id="@Model.Id" class="btn btn-add-to-cart btn-success hidden">Add to Cart</button>
-                }
-                else
-                {
-                    <button data-id="@Model.Id" class="btn btn-remove-from-cart btn-danger hidden">Remove from Cart</button>
-                    <button data-id="@Model.Id" class="btn btn-add-to-cart btn-success ">Add to Cart</button>
-                }
-            </div>
-
-        
+        <div class="product-actions">
+            @if (Model.IsAddedToCart)
+            {
+                <button data-id="@Model.Id" class="btn btn-remove-from-cart btn-danger">Remove from cart</button>
+                <button data-id="@Model.Id" class="btn btn-add-to-cart btn-success hidden">Add to cart</button>
+            }
+            else
+            {
+                <button data-id="@Model.Id" class="btn btn-remove-from-cart btn-danger hidden">Remove from cart</button>
+                <button data-id="@Model.Id" class="btn btn-add-to-cart btn-success ">Add to cart</button>
+            }
+        </div>
     </div>
 </div>
