--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Views/_ViewImports.cshtml
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Prasalnik.Anketa
 @using Prasalnik.Anketa.Models
+@using Prasalnik.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
