--- a/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Views/Questionnaire/Index.cshtml
+++ b/anketa/Prasalnik.Anketa.Skopje/Prasalnik.Anketa/Views/Questionnaire/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Prasalnik.Dtos.QuestionnaireDto
+﻿@model Prasalnik.ViewModels.Models.QuestionnaireViewModel
 
 @{
     ViewData["Title"] = "Questionnaire";
@@ -8,23 +8,23 @@
 <p>Status: @Model.Status</p>
 
 <form asp-action="SubmitAnswers" method="post">
-    @for (int i = 0; i < Model.QuestionItems.Count; i++)
+    @for (int i = 0; i < Model.QuestionItemViewModel.Count; i++)
     {
         <div class="form-group mb-3">
-            <label>@Model.QuestionItems[i].QuestionText</label>
+            <label>@Model.QuestionItemViewModel[i].QuestionText</label>
 
-            @if (Model.QuestionItems[i].Type == "Text")
+            @if (Model.QuestionItemViewModel[i].Type == "Text")
             {
                 <input type="text" class="form-control" name="Answers[@i].Response" />
             }
-            else if (Model.QuestionItems[i].Type == "Radio")
+            else if (Model.QuestionItemViewModel[i].Type == "Radio")
             {
                 <div>
                     <input type="radio" name="Answers[@i].Response" value="Yes" /> Yes
                     <input type="radio" name="Answers[@i].Response" value="No" /> No
                 </div>
             }
-            else if (Model.QuestionItems[i].Type == "Scale")
+            else if (Model.QuestionItemViewModel[i].Type == "Scale")
             {
                 <select class="form-select" name="Answers[@i].Response">
                     @for (int j = 1; j <= 10; j++)
@@ -34,7 +34,7 @@
                 </select>
             }
 
-            <input type="hidden" name="Answers[@i].QuestionId" value="@Model.QuestionItems[i].Id" />
+            <input type="hidden" name="Answers[@i].QuestionId" value="@Model.QuestionItemViewModel[i].Id" />
         </div>
     }
 
