--- a/anketa/Anketa/Anketa.Skopje/Views/Form/Index.cshtml
+++ b/anketa/Anketa/Anketa.Skopje/Views/Form/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewData["Title"] = "Анкети за Задоволство на Вработените";
 }
-
+<link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
 <div class="container">
     <div class="row">
         <div class="col-12">
