--- a/prasalnik - gpt/GlasAnketaForma/GlasAnketa/Views/_ViewImports.cshtml
+++ b/prasalnik - gpt/GlasAnketaForma/GlasAnketa/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GlasAnketa
 @using GlasAnketa.Models
+@using GlasAnketa.ViewModels.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
